frontend/test/should_pass/set_model_003.gm
node class N
{
	nodeSet:set<Node>;
	nSet:set<N>;
	val:int;
}

edge class E
{
	edgeSet:set<Edge>;
	eSet:set<E>;
	uSet:set<UEdge>;
	val:int;
}
