frontend/test/should_fail/index_model_003.gm
node class N
{
	i:int;
}

edge class E;

index foo { countIncident(Node) }

index bar { N.i }